--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,3 +30,5 @@ jobs:
 
       - name: Run linter
         run: npx ng lint
+      - name: Run tests
+        run: "echo 'no tests available at the moment'"
