--- a/angular.json
+++ b/angular.json
@@ -110,6 +110,7 @@
   },
   "cli": {
     "analytics": false,
+    "packageManager": "bun",
     "schematicCollections": [
       "@angular-eslint/schematics"
     ]
