--- a/.github/workflows/bunjs.yml
+++ b/.github/workflows/bunjs.yml
@@ -1,4 +1,4 @@
-name: Node CI
+name: Bun CI
 
 on:
   - push
@@ -19,7 +19,7 @@ jobs:
 
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: ${{ matrix.bun-version }}
+          bun-version: latest
 
       - name: npm install, build
         run: |
