--- a/.github/workflows/bunjs.yml
+++ b/.github/workflows/bunjs.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        bun-version: [1.x.x]
+        bun-version: [1.x]
 
     steps:
       - uses: actions/checkout@v4
@@ -19,9 +19,9 @@ jobs:
 
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: ${{ matrix.bun-version }}
+          bun-version: latest
 
-      - name: bun install, build
+      - name: npm install, build
         run: |
           bun install
           rm -rf dist
