--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@angular/cli": "^19.0.1",
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~4.3.6",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "angular-eslint": "18.1.0",
     "eslint": "^9.15.0",
     "jasmine-core": "~4.6.1",
@@ -48,6 +50,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~5.6.3",
-    "typescript-eslint": "8.0.0-alpha.38"
+    "typescript-eslint": "^8.15.0"
   }
 }
