--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "tests": "ng test",
     "lint": "ng lint"
   },
   "private": true,
