--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "tests": "ng test",
+    "tests_ci": "ng test --no-watch --no-progress --browsers=FirefoxHeadless",
     "lint": "ng lint"
   },
   "private": true,
@@ -48,6 +49,7 @@
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
+    "karma-firefox-launcher": "^2.1.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~5.6.3",
