--- a/.github/workflows/bunjs.yml
+++ b/.github/workflows/bunjs.yml
@@ -31,4 +31,4 @@ jobs:
       - name: Run linter
         run: bun lint
       - name: Run tests
-        run: bun tests ci
+        run: bun tests_ci
