--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   "homepage": "https://github.com/dimidroll450/currency_converter#readme",
   "dependencies": {
     "@angular/animations": "^19.0.1",
+    "@angular/cdk": "19.0.2",
     "@angular/common": "^19.0.1",
     "@angular/compiler": "^19.0.1",
     "@angular/core": "^19.0.1",
     "@angular/forms": "^19.0.1",
+    "@angular/material": "19.0.2",
     "@angular/platform-browser": "^19.0.1",
     "@angular/platform-browser-dynamic": "^19.0.1",
     "@angular/router": "^19.0.1",
